A.P.E.X - rebuild as an API under maven after multiple comments formating issues.
 - corrected naming schematics
 - followed standards for hierarchy structures

 - added plug and play modules

 - added better reporting functions on/off/ & to file

 - added jhm benchmarks

 - added examples for executions

 - added quick launch functions for Benchmarks,Apex